Create new var board, change board to ship name